[package]
name = "polar"
version = "0.1.0"
edition = "2021"
default-run = "polar"

[lib]
name = "polar"
path = "src/library.rs"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
dotenvy = "0.15.7"
clap = { version = "4.5.16", features = ["derive"] }
figment = { version = "0.10.6", features = [
    "env",
    "toml",
    "json",
    "yaml",
    "test",
] }
serde = "1.0.209"
serde_json = "1.0.127"
serde_yaml = "0.9.34"
serde-xml-rs = "0.6.0"
toml = "0.8.19"
diesel = { version = "2.2.0", features = ["postgres"] }
diesel_migrations = "2.2.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
default-features = false
features = ["diesel_postgres_pool"]
