[package]
name = "polar"
version = "0.1.1"
edition = "2021"
default-run = "polar"

[lib]
name = "polar"
path = "src/library.rs"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
dotenvy = "0.15.7"
clap = { version = "4.5.16", features = ["derive"] }
figment = { version = "0.10.6", features = [
    "env",
    "toml",
    "json",
    "yaml",
    "test",
] }
serde = "1.0.209"
serde_json = "1.0.127"
serde_yaml = "0.9.34"
serde-xml-rs = "0.6.0"
toml = "0.8.19"
diesel = { version = "2.1.6", features = ["postgres"] }
diesel_migrations = "2.1.0"
tokio-postgres = "0.7.12"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]
